example/compilation/errors/semantic/func_proc/undefined.arn


var x : int;

// Error
x := my_func(); // my_func is not declared